--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
     "next": "12.1.1",
     "react": "17.0.2",
@@ -19,6 +20,7 @@
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "eslint": "^8.12.0",
     "typescript": "4.6.3"
   }
 }
