--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
